apps/kubeflow/runtime/delete-unsupported-cache-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-server
$patch: delete
