apps/kubeflow/runtime/mysql-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  template:
    spec:
      containers:
        - name: mysql
          image: docker.io/library/mysql@sha256:b3b90af2a6552ae30c266fdb7d5dd55f3afb72404bb78d37fe8a23eb857fd3fb
          resources:
            requests:
              cpu: 100m
              memory: 800Mi
            limits:
              cpu: "1"
              memory: 2Gi
